--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             app:navigationIconTint="@color/white"
             app:title="@string/text_title_toolbar_home"
-            app:titleCentered="true"
+            app:titleCentered="false"
             app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
