--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,35 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Text_title" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textSize">@dimen/text_title</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/aclonica</item>
+    </style>
+
+    <style name="Text_description" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">@dimen/text_description</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">@font/aclonica</item>
+    </style>
+
+    <style name="Text_button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_button</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fillViewport">true</item>
+    </style>
+
+    <style name="Text_title_splash">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textSize">@dimen/text_title_splash</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/aclonica</item>
+    </style>
 </resources>
