--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SplashViewPagerToolbar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SplashViewPagerToolbar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,36 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Text_title" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textSize">@dimen/text_title</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/aclonica</item>
+    </style>
+
+    <style name="Text_description" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">@dimen/text_description</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">@font/aclonica</item>
+    </style>
+
+    <style name="Text_button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_button</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fillViewport">true</item>
+    </style>
+
+    <style name="Text_title_splash">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textSize">@dimen/text_title_splash</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/aclonica</item>
     </style>
 </resources>
